# STM32-Training-Camp

Lab0/: .mxproject  CMakeLists.txt  Lab0.ioc  Makefile  README.md
Lab0/Core/Inc/: main.h
Lab0/Core/Src/: main.c
Lab0/CubeMX/: Makefile
Lab1/: .mxproject  CMakeLists.txt  Lab1.ioc  Makefile
Lab1-Segment/: CMakeLists.txt  Lab1-Segment.ioc  Makefile
Lab1-Segment/Core/Inc/: main.h
Lab1-Segment/Core/Src/: main.c
Lab1-Segment/CubeMX/: Makefile
Lab1/Core/Inc/: main.h
Lab1/Core/Src/: main.c
Lab1/CubeMX/: Makefile
Lab9-Buzzer/: .mxproject  CMakeLists.txt  Lab9-Buzzer.ioc  Makefile
Lab9-Buzzer/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Lab9-Buzzer/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Lab9-Buzzer/CubeMX/: Makefile
Proj-Calculator/: .mxproject  CMakeLists.txt  Makefile  Proj-Calculator.ioc
Proj-Calculator/Core/Inc/: main.h
Proj-Calculator/Core/Src/: main.c
Proj-Calculator/CubeMX/: Makefile
Proj-Calculator/cmake/: mcu.cmake
STM32Cube_FW_G4_V1.6.1/: Package_license.html
STM32Cube_FW_G4_V1.6.1/Drivers/BSP/B-G474E-DPOW1/: Release_Notes.html  b_g474e_dpow1.c  b_g474e_dpow1.h
STM32Cube_FW_G4_V1.6.1/Drivers/BSP/STM32G474E-EVAL/: Release_Notes.html  stm32g474e_eval.c  stm32g474e_eval.h
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Demonstrations/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Demonstrations/Inc/: BuckBoost.h  HW_3p3z_controller.h  ledRGB.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Demonstrations/Src/: BuckBoost.c  HW_3p3z_controller.c  ledRGB.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Examples/BSP/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Templates/Inc/: b_g474e_dpow1_conf.h  main.h
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/B-G474E-DPOW1/Templates_LL/Inc/: main.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431KB/Demonstrations/Led_Jumper/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431KB/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431KB/Templates/Inc/: stm32g4xx_nucleo_conf.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431KB/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431KB/Templates_LL/Inc/: main.h  stm32_assert.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431RB/Demonstrations/Adafruit_LCD_1_8_SD_Joystick/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431RB/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431RB/Templates/Src/: main.c
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431RB/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G431RB/Templates_LL/Inc/: main.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G474RE/Demonstrations/Adafruit_LCD_1_8_SD_Joystick/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G474RE/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G474RE/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G474RE/Templates_LL/Inc/: main.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G474RE/Templates_LL/Src/: main.c
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Applications/OpenBootloader/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates/Inc/: main.h  stm32g4xx_hal_conf.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates_LL/Inc/: stm32g4xx_it.h
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates_LL/MDK-ARM/: startup_stm32g491xx.s
STM32Cube_FW_G4_V1.6.1/Projects/NUCLEO-G491RE/Templates_LL/Src/: stm32g4xx_it.c
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL/Demonstrations/Binary/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL/Demonstrations/Config/: ffconf.h  k_config.h  stm32g474e_eval_conf.h  stm32g4xx_hal_conf.h
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL/Templates_LL/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL1/Templates/: readme.txt
STM32Cube_FW_G4_V1.6.1/Projects/STM32G474E-EVAL1/Templates_LL/: readme.txt
cmake/: gcc-arm-none-eabi.cmake
(+2532 files in other folders)
